<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login"
    >


    <TextView
        android:id="@+id/buttonsignin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/rounded1"
        android:padding="14dp"
        android:text="@string/se_connecter"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="16dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/linearLayout"
        app:layout_constraintRight_toRightOf="@+id/linearLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.509" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="236dp"
        android:layout_height="175dp"
        app:srcCompat="@drawable/logo"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="67dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.503" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <EditText
            android:id="@+id/numPermis"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="#f0f0f4"
            android:drawableLeft="@drawable/ic_shapes_2"
            android:drawablePadding="16dp"
            android:hint="@string/e_mail"

            android:inputType="number"
            android:padding="12dp"
            android:textColor="#000"
            tools:layout_editor_absoluteX="206dp"
            tools:layout_editor_absoluteY="390dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#f0f0f4"
            android:drawableLeft="@drawable/ic_tool_6"
            android:drawablePadding="16dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="#000"
            tools:layout_editor_absoluteX="-72dp"
            tools:layout_editor_absoluteY="287dp" />

        <TextView
            android:id="@+id/inscrire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/s_inscrire"
            android:textColor="@color/colorAccent"
            android:textSize="15sp" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>