<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


    <TextView
        android:id="@+id/account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/rounded1"
        android:padding="14dp"
        android:text="Suivant"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="16dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/linearLayout2"
        app:layout_constraintRight_toRightOf="@+id/linearLayout2"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="173dp"
        android:layout_height="114dp"
        app:srcCompat="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="45dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">

        <EditText
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="#f0f0f4"
            android:drawableLeft="@drawable/ic_shape_1"
            android:drawablePadding="16dp"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="#000"
            tools:layout_editor_absoluteX="41dp"
            tools:layout_editor_absoluteY="124dp" />

        <EditText
            android:id="@+id/numTel"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="#f0f0f4"
            android:drawableLeft="@drawable/ic_call_black_24dp"
            android:drawablePadding="16dp"
            android:hint="Num Tel"
            android:inputType="phone"
            android:padding="12dp"
            android:textColor="#000"
            tools:layout_editor_absoluteX="89dp"
            tools:layout_editor_absoluteY="288dp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="#f0f0f4"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:drawablePadding="16dp"
            android:hint="Email "
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textColor="#000"
            tools:layout_editor_absoluteX="89dp"
            tools:layout_editor_absoluteY="288dp" />

        <EditText
            android:id="@+id/numPermis"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="#f0f0f4"
            android:drawableLeft="@drawable/ic_shapes_2"
            android:drawablePadding="16dp"
            android:hint="@string/e_mail"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="#000"
            tools:layout_editor_absoluteX="166dp"
            tools:layout_editor_absoluteY="322dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="#f0f0f4"
            android:drawableLeft="@drawable/ic_tool_6"
            android:drawablePadding="16dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="#000"
            tools:layout_editor_absoluteX="89dp"
            tools:layout_editor_absoluteY="288dp" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>